# cmake-demo

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
src/: main.cpp
src/date/: Date.cpp  Date.h
src/file/: FileReader.cpp  FileReader.h
src/logger/: DualStreamBuffer.cpp  DualStreamBuffer.h  Logger.cpp  Logger.h
src/math/: Circle.cpp  Circle.h
